@@ -1,3 +1,7 @@
+2006-06-11 Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
+	* midi/audio_drivers/mt32emu/i386.cpp: sync with scummvm to make it
+	  compile with gcc 4
+
 2006-04-29  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
 	* various: fix delete/delete[] mixups
 
